# retro

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  convert.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  chart-panel.js  chart.js  indicators.js  panel-manager.js  panel-resizer.js
frontend/js/panels/: oscillator-panel.js  price-panel.js  volume-panel.js
scripts/: filter_by_marketcap.py  llm_bridge.py  load_data.py
src/: data.rs  generated.rs  generated_store.rs  indicators.rs  llm.rs  main.rs  scan_types.rs  scanner.rs  server.rs
