[package]
name = "retro"
version = "0.1.0"
edition = "2021"
description = "Blazing fast stock market scanner"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Data handling
polars = { version = "0.46", features = ["parquet", "lazy"] }
parquet = "54"
arrow = "54"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for fast binary serialization

# Async
futures = "0.3"
tokio-stream = "0.1"

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1  # Some optimization even in dev for speed testing
